<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/YP_blue"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="27sp"
            android:fontFamily="sans-serif-black"
            android:padding="15sp"
            >
        </TextView>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:paddingLeft="2dp"
        android:paddingRight="2dp">

        <LinearLayout
            android:id="@+id/search_button"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:background="@drawable/button_big"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="@dimen/main_menu_button_icons"
                android:layout_height="@dimen/main_menu_button_icons"
                android:layout_marginEnd="8dp"
                android:src="@drawable/search_icon">

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/search"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/main_menu_button_text" />
        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:paddingLeft="2dp"
        android:paddingRight="2dp">

        <LinearLayout
            android:id="@+id/music_library_button"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/button_big"
            android:layout_margin="12dp"
            android:padding="8dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="@dimen/main_menu_button_icons"
                android:src="@drawable/music_library_icon"
                android:layout_marginEnd="8dp">

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music_library"
                android:textSize="@dimen/main_menu_button_text"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:fontFamily="sans-serif-medium"/>
        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:paddingLeft="2dp"
        android:paddingRight="2dp">

        <LinearLayout
            android:id="@+id/settings_button"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/button_big"
            android:layout_margin="12dp"
            android:padding="8dp">

            <ImageView
                android:layout_width="@dimen/main_menu_button_icons"
                android:layout_height="@dimen/main_menu_button_icons"
                android:src="@drawable/settings_icon"
                android:layout_marginEnd="8dp">

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textSize="@dimen/main_menu_button_text"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:fontFamily="sans-serif-medium"/>
        </LinearLayout>

    </FrameLayout>


</LinearLayout>
